--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router-dom": "^4.0.0",
+    "spotify-web-api-js": "^0.21.2",
     "spotify-web-api-node": "^2.3.6",
     "webpack": "^2.2.1"
   }
